src/ModularMonolith/.k8s/db.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  strategy: {}
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - env:
        - name: ACCEPT_EULA
          value: "Y"
        - name: MSSQL_PID
          value: Developer
        - name: SA_PASSWORD
          value: sqladmin123!@#
        image: mcr.microsoft.com/mssql/server:2017-latest
        name: db
        ports:
        - containerPort: 1433
        resources: {}
      restartPolicy: Always
status: {}
