src/ModularMonolith/.k8s/migrator.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: migrator
  name: migrator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: migrator
  strategy: {}
  template:
    metadata:
      labels:
        app: migrator
    spec:
      containers:
      - env:
        - name: CheckDependency__Enabled
          value: "true"
        - name: CheckDependency__Host
          value: db:1433
        image: phongnguyend/classifiedads.modularmonolith.migrator
        name: migrator
        resources: {}
      restartPolicy: Always
status: {}
