src/ModularMonolith/.k8s/webapi.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapi
  name: webapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapi
  strategy: {}
  template:
    metadata:
      labels:
        app: webapi
    spec:
      containers:
      - env:
        - name: Authentication__IdentityServer__Authority
          value: http://identityserver
        - name: Authentication__IdentityServer__RequireHttpsMetadata
          value: "false"
        image: phongnguyend/classifiedads.modularmonolith.webapi
        name: webapi
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
status: {}
