src/ModularMonolith/.k8s/background.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: background
  name: background
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: background
status:
  loadBalancer: {}
