src/ModularMonolith/.k8s/identityserver.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: identityserver
  name: identityserver
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: identityserver
status:
  loadBalancer: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: identityserver
  name: identityserver-public
spec:
  type: LoadBalancer
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: identityserver
status:
  loadBalancer: {}
