src/ModularMonolith/.k8s/migrator.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: migrator
  name: migrator
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: migrator
status:
  loadBalancer: {}
