src/ModularMonolith/.k8s/webapi.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webapi
  name: webapi
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: webapi
status:
  loadBalancer: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: webapi
  name: webapi-public
spec:
  type: LoadBalancer
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: webapi
status:
  loadBalancer: {}
